RESOLVED FIXED80133
REGRESSION(r97353): Crash when accessing location or history properties inside a navigated window
https://bugs.webkit.org/show_bug.cgi?id=80133
Summary REGRESSION(r97353): Crash when accessing location or history properties insid...
Maciej Stachowiak
Reported 2012-03-02 02:09:06 PST
REGRESSION(r97353): Crash when accessing location or history properties inside a navigated window
Attachments
Patch (7.68 KB, patch)
2012-03-02 02:11 PST, Maciej Stachowiak
koivisto: review+
Maciej Stachowiak
Comment 1 2012-03-02 02:11:26 PST
Antti Koivisto
Comment 2 2012-03-02 02:37:30 PST
Comment on attachment 129856 [details] Patch r=me
Maciej Stachowiak
Comment 3 2012-03-02 11:58:43 PST
Note You need to log in before you can comment on or make changes to this bug.